--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -1,18 +1,20 @@
 \section{Projektbeschreibung}
 \subsection{Motivation}
-In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr hergestellt werden. Diese soll mit Batterien und ohne Netzanbindung betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Angesteuert wird der Display über einen Microcontroller. Zwei Buttons werden verbaut, um die Uhr minutengenau einstellen zu können.
+In diesem Projekt wird eine selbstgebaute Dezimal-Binär-Uhr hergestellt die mit Batterien und ohne Netzanbindung betrieben wird. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Dadurch wird die Uhr besonders energiesparend und es können individuelle Symbole zur Anzeige der Uhrzeit gewählt werden. Angesteuert wird der Display über einen Microcontroller. Zwei Taster dienen zur minutengenau Einstellung der Uhr. Derartige Binäruhren sind nicht käuflich erhätlich und es existieren noch keine Anlneitungen dafür.
 
 \subsection{Spezifikationen}
 Die Uhr sollte folgende Eigenschaften aufweisen:
 \begin{itemize}
 \item Anzeige der Uhrzeit in einem Dezimal-Binär-Code (binäre Darstellung der Dezimalstellen)
-\item Energiearmer Verbauch mit Batterien
-\item Ansteuerung durch Microcontroller
+\item Betrieb mit herkömmlichen Batterien
+\item Geringer Verbauch und somit langer unabhängiger Betrieb
+\item Individuelles Design
+\item Ansteuerung durch einen Microcontroller
 \end{itemize}
 
 \subsection{Produktionsschritte}
 
-Bei der Herstellung des Uhr soll wie folgt vorgegangen werden: Zuerst wird das LCD-Display an sich hergestellt. Nach der Fertigstellung der Elektronik wird das Programm geschrieben und das Gehäuse gefertigt. 
+Bei der Herstellung des Uhr wird wie folgt vorgegangen: Zuerst wird das LCD-Display an sich hergestellt. Nach der Fertigstellung der Elektronik wird das Programm geschrieben und das Gehäuse gefertigt. 
 
 \subsection{Vorraussetzungen}
 %FIXME welche noch
@@ -27,8 +29,8 @@ Im Folgenden sind die verwendeten Werkzeuge aufgeführt:\\
 \item Chemikaliengefäße (Schälchen und Glasgefäße)
 \item Heizfeld
 \item Pipetten
-\item Sämtliches Zubehör zur Platinenherstellung
-\item Lasercutter
+\item Zubehör zur Platinenherstellung (Drucker, Belichter, Bohrer)
+\item Lasercutter (Zuschneiden des Gehäuses)
 \item Multimeter
 \item Schere
 \item Lötkolben
@@ -37,25 +39,21 @@ Im Folgenden sind die verwendeten Werkzeuge aufgeführt:\\
 
 
 
-Folgende Materialien wurden verwendet:\\
+Folgende Materialien wurden für 1 Display verwendet (Manche Materialien können mehrfach verwendet werden):\\
 
 \begin{itemize}
-\item Indium-Zinn beschichtete Glasplatten (2 Stck. pro Display)
+\item Indium-Zinn beschichtete Glasplatten (2 Stück pro Display)
 \item Aceton
 \item Klebefolie für Schneideplotter
-\item 5\%-ige Salzsäue
-%FIXME Menge
-\item Siedesteinchen
-\item Reinigungskonzentrat (alkalisch, tensidfrei)
-%FIXME wie viel + welches
+\item 5\%-ige Salzsäue (200ml, kann wiederverwendet werden)
+\item Siedesteinchen (10-20 Stück)
+\item Reinigungskonzentrat RBS 35 (100g, kann wiederverwendet werden)
 \item Fusselfreie Tücher
-\item Abstandshalterbogen \(15\,\mathrm{\mu m}\)
-%FIXME Zigerattenfolien dazuschreiben? - in Anleitung dazuschreiben!
+\item Abstandshalterbogen \(15\,\mathrm{\mu m}\) (4 Stück 1mmx4mm)
 \item Zweikomponentenkleber
-\item Nematische Weitbereichsmischung / Flüssigkristall
-%FIXME wie viel
+\item Nematischer Flüssigkristall (2g)
 \item Polarisationsfolie selbstklebend, transparent
 \item Polarisationsfolie selbstklebend, mit Reflektor
-\item Zubehör zur Platinenherstellung
-\item Acryl
+\item Zubehör zur Platinenherstellung (Platinen, Chemikalien)
+\item Acryl zur Gehäuseherstellung
 \end{itemize}
