--- a/paper/Kapitel/bibliography.tex
+++ b/paper/Kapitel/bibliography.tex
@@ -10,6 +10,7 @@
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
+
 \begin{thebibliography}{1}
 %FIXME letzter aufruf der webseiten hinzufügen
 \bibitem{lcdlayers}
@@ -23,13 +24,30 @@ CC-BY-SA
 \bibitem{aufbau_und_funktion}
 D.~Holke
 \emph{Aufbau und Funktion einer LCD Zelle}
+\label{aufbau_und_funktion}
 \hskip 1em plus 0.5em minus 0.4em\relax
 \url{https://www.cmb-systeme.de/technikwissen/aufbau-und-funktion-einer-lcd-zelle}
 
-\bibitem{anleitung}
+\bibitem{Bauanleitung}
 F.~Oestreicher
 \emph{Selbstbau einer funktionsfähigen Flüssigkristallanzeige}
+\label{Bauanleitung}
 \hskip 1em plus 0.5em minus 0.4em\relax
 \url{http://fluessigkristalle.com/selbstbau.htm}
+
+\bibitem{conductivepaint}
+bareconductives
+\emph{conductive paint}
+\label{conductivepaint}
+\hskip 1em plus 0.5em minus 0.4em\relax
+\url{http://www.bareconductive.com/shop/electric-paint-10ml/}
+
+\bibitem{Fotolack}
+Conrad electronics
+\emph{Fotosensitiver Lack positiv 20}
+\label{Fotolack}
+\hskip 1em plus 0.5em minus 0.4em\relax
+\url{https://www.conrad.de/de/fotokopierlack-crc-kontakt-chemie-positiv-20-82004-aa-100-ml-813923.html}
+
 
 \end{thebibliography}
