--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -8,27 +8,26 @@
   \label{lcdaufbau}
 \end{figure}
 
-Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von circa 10 Mikrometern. Auf den Glasplatten befinden sich leitende Schichten aus Indium-Zinn. Diese Schichten werden später zur Darstellung von Zeichen oder Symbolen verwendet. Der grundsätzliche Aufbau eines LCD Displays besteht aus folgenden Teilen (siehe Abbildung \ref{LCD_layers}):
+Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von circa 10 Mikrometern. Auf den Glasplatten befinden sich leitende Schichten aus Indium-Zinn. Diese Schichten werden später zur Darstellung von Zeichen oder Symbolen verwendet. Der grundsätzliche Aufbau eines LCD Displays besteht aus folgenden Teilen (siehe Abbildung \ref{lcdaufbau}):
 \begin{itemize}
 \item Zwei Glasplatten, die mit der leitenden Schicht überzogenen Innenseiten liegen sich gegenüber (Markierung 2 und 4)
 \item Zwischen den Glasplatten: Flüssigkristall (Markierung 3)
 \item Außerhalb der Glasplatten: Polarisationsfolienn (Markierung 1 und 5)
 \item Eine Refelektorfolie auf einer Seite (Markierung 6)
 \end{itemize}
-Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: Bauanleitung und https://www.cmb-systeme.de/technikwissen/aufbau-und-funktion-einer-lcd-zelle)
+Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite[Bauanleitung]{Bauanleitung} \cite[LCD Aufbau und Funktion]{aufbau_und_funktion})
 
-%FIXME Sollte der Link nicht in die Quellenangabe und dann ein Verweis?
 
 \subsection{Produktionsschritte}
-Schritt 1: Strukturierung der Elektroden, durch Aufbringen der Klebefolie auf die Bereiche, an denen ein Symbol sichtbar sein soll.\\
-Schritt 2: Wegätzen der beschichteten Bereiche, die nicht angezeigt werden sollen (mit 5\% Salzsäure), sodass die braune leitende Indium-Zinn Schicht der Glasplatten verschwindet.\\
-Schritt 3: Entfernen der Abdeckschicht (Klebefolie), dabei werden Klebereste mit Aceton entfernt.\\
-Schritt 4: Oxidieren der Indium-Zinn-Schicht (im Ofen bei 250 Grad) zu Indium-Zinn-Oxid, damit die Glasplatten möglichst transparent werden und noch leitfähiger werden.\\
-Schritt 5: Reinigung der Glasplatten durch Kochen in einem im Verhältnis 1:5 verdünnten alkalischen tensidfreien Reinigungsbad für 5 Minuten, damit die Glasplatten komplett fettfrei werden. Dabei werden auch Siedesteinchen verwendet, um einen Siedeverzug zu vermeiden.\\
-Schritt 6: Orientierung der Oberflächenmoleküle der leitenden Schicht der Glasplatten durch die sogenannte {\quote Reiborientierung}. Dies geschieht mit Hilfe eines Zellstofftuchs mit dem über die Platten gerieben wird. Die obere und die untere Glasplatte müssen 90 Grad versetzt orientiert sein.\\
-Schritt 7: Zwischen den Glasplatten werden am Rand Abstandshalter eingelegt, damit diese sich später mit einem Abstand von ungefähr 12 Mikrometern  gegenüberliegen. Hier eignet sich zum Beispiel die Verpackungsfolie von Zigarettenschachteln.\\
-Schritt 8: Die Glasplatten werden mit übereinandergelegt, sodass sich die beiden leitenden Seiten gegenüberliegen. Danach werden zunächst zwei parallele Seiten mit einem Zweikomponent-Kleber verklebt, während Druck auf die Abstandhalterfolie ausgeübt wird. Dadurch wird gewährleistet, dass der Abstand bewahrt wird. Ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion. \\
-Schritt 9: Nun werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht selber durch die Kapillarwirkung in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.
+\textbf{Schritt 1:} Strukturierung der Elektroden, durch Aufbringen der Klebefolie auf die Bereiche, an denen ein Symbol sichtbar sein soll.\\
+\textbf{Schritt 2:} Wegätzen der beschichteten Bereiche, die nicht angezeigt werden sollen (mit 5\% Salzsäure), sodass die braune leitende Indium-Zinn Schicht der Glasplatten verschwindet.\\
+\textbf{Schritt 3:} Entfernen der Abdeckschicht (Klebefolie), dabei werden Klebereste mit Aceton entfernt.\\
+\textbf{Schritt 4:} Oxidieren der Indium-Zinn-Schicht (im Ofen bei 250 Grad) zu Indium-Zinn-Oxid, damit die Glasplatten möglichst transparent werden und noch leitfähiger werden.\\
+\textbf{Schritt 5:} Reinigung der Glasplatten durch Kochen in einem im Verhältnis 1:5 verdünnten alkalischen tensidfreien Reinigungsbad für 5 Minuten, damit die Glasplatten komplett fettfrei werden. Dabei werden auch Siedesteinchen verwendet, um einen Siedeverzug zu vermeiden.\\
+\textbf{Schritt 6:} Orientierung der Oberflächenmoleküle der leitenden Schicht der Glasplatten durch die sogenannte {\quote Reiborientierung}. Dies geschieht mit Hilfe eines Zellstofftuchs mit dem über die Platten gerieben wird. Die obere und die untere Glasplatte müssen 90 Grad versetzt orientiert sein.\\
+\textbf{Schritt 7:} Zwischen den Glasplatten werden am Rand Abstandshalter eingelegt, damit diese sich später mit einem Abstand von ungefähr 12 Mikrometern  gegenüberliegen. Hier eignet sich zum Beispiel die Verpackungsfolie von Zigarettenschachteln.\\
+\textbf{Schritt 8:} Die Glasplatten werden mit übereinandergelegt, sodass sich die beiden leitenden Seiten gegenüberliegen. Danach werden zunächst zwei parallele Seiten mit einem Zweikomponent-Kleber verklebt, während Druck auf die Abstandhalterfolie ausgeübt wird. Dadurch wird gewährleistet, dass der Abstand bewahrt wird. Ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion. \\
+\textbf{Schritt 9:} Nun werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht selber durch die Kapillarwirkung in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.
 (Quelle: Bauanleitung)
 
 %FIXME Wie ist das mit der Quellenangabe? Am Ende?
@@ -39,12 +38,12 @@ In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leit
 
 \subsubsection*{Fotolack}
 
-Wie bei der Herstellung von Platinen wird auf die leitende Seite der Glasplatten eine Schicht Fotolack aufgetragen. Verwendet wurde POSITIV 20 Lichtemfpindlicher Lack (https://www.conrad.de/de/fotokopierlack-crc-kontakt-chemie-positiv-20-82004-aa-100-ml-813923.html), erworben bei Conrad Electronics.
+Wie bei der Herstellung von Platinen wird auf die leitende Seite der Glasplatten eine Schicht Fotolack aufgetragen. Verwendet wurde \cite[\textit{POSITIV 20 Lichtemfpindlicher Lack}]{Fotolack}.
 Bei Raumtemperatur muss der Lack für 24h an einem dunklen Ort trocknen. Die Glasplatten sollten zudem vor dem Besprühen gut gereinigt werden, um Fettflecken und andere Verunreinigungen zu entfernen. Ansonsten besteht die Gefahr, dass der Lack nicht gut haftet oder sich schlecht verteilt.
 Auf mehreren Platten wurde der Fotolack in verschiednene Arten aufgetragen. Zum einen wurde ein Test für 1 bis zu 5 aufgetragenen Schichten durchlaufen. Des Weiteren wurden die Platten flach auf dem Boden liegend, sowie in einem 30 Grad Winkel besprüht.
 Mit letzerer Methode wurde das beste Ergebnis erzielt, da der Lack leicht nachlfließen konnte und sich somit am schönsten verteilt hat. Bei der Schichtdicke war es ausreichend eine einzelne Schicht aufzutragen.
 
-Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschitete Seite gelegt. Wie beim Belichten von Platinen ist eine Belichtungszeit von 9:40 min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist umbedingt darauf zu Achten ein lichtundruchlässiges Objekt auf die nicht mit Fotolack beschichtete Seite zu legen (Beispielsweise eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt (NaOH, siehe \ref{sec:Platine}).\\
+Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschitete Seite gelegt. Wie beim Belichten von Platinen ist eine Belichtungszeit von 9:40 min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist umbedingt darauf zu Achten ein lichtundruchlässiges Objekt auf die nicht mit Fotolack beschichtete Seite zu legen (Beispielsweise eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt (NaOH, siehe Abschnitt \ref{subsec:platine}).\\
 
 
 \begin{figure}[t]
@@ -72,7 +71,7 @@ Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displa
 
 
 \subsection{Ätzen der Struktur}
-\b{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die brauen Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet. Hierbei stehen zwei Verfahren zur Auswahl.\\
 
@@ -109,7 +108,7 @@ Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure 
 
 \subsection{Oxidierung der Glasplatten}
 
-\b{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Um die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid zu erreichen wurden mehrere Verfahren getestet. Im Folgenden werden diese forgestellt und auf ihre Einsetzbarkeit überprüft.
 Indikatoren für eine gelungene Oxidierung sind:
@@ -120,7 +119,7 @@ Indikatoren für eine gelungene Oxidierung sind:
 
 \subsubsection{Wasserstoffperoxid}
 
-\b{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Eine Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Beide oben genannten Indikatoren haben nicht angesprochen, was darauf schließen lässt, dass der Oxidierungsversuch nicht erfolgreich war.
 Nun soll ein Langzeittest über mehrere Tage Erkentnisse geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
@@ -153,7 +152,7 @@ Die Platten können ohne Probleme anhand der schwachen braunen Restfäbrung ausg
 
 \subsection{Reinigung der Glasplatten}
 
-\b{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Im nächsten Schritt müssen die Glasplatten gereinigt werden, da jede Verunreinigung dazu führen kann, dass ungewollte Flecken entstehen.
 Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in das die Glasplatten hineingelegt werden können (siehe Bild f). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüßigkeit mit einem Heizfeld zum kochen gebracht. Die Glasplatten für 5 min im kochenden Wasser belassen und dann erst wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum Springen bringen können.
