--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -28,9 +28,7 @@ Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf j
 \textbf{Schritt 7:} Zwischen den Glasplatten werden am Rand Abstandshalter eingelegt, damit diese sich später mit einem Abstand von ungefähr 12 Mikrometern  gegenüberliegen. Hier eignet sich zum Beispiel die Verpackungsfolie von Zigarettenschachteln.\\
 \textbf{Schritt 8:} Die Glasplatten werden mit übereinandergelegt, sodass sich die beiden leitenden Seiten gegenüberliegen. Danach werden zunächst zwei parallele Seiten mit einem Zweikomponent-Kleber verklebt, während Druck auf die Abstandhalterfolie ausgeübt wird. Dadurch wird gewährleistet, dass der Abstand bewahrt wird. Ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion. \\
 \textbf{Schritt 9:} Nun werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht selber durch die Kapillarwirkung in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.
-(Quelle: Bauanleitung)
-
-%FIXME Wie ist das mit der Quellenangabe? Am Ende?
+(Quelle: \cite[Bauanleitung]{Bauanleitung})
 
 \subsection{Elektrodenstrukturaufbringung}
 
@@ -77,7 +75,7 @@ Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts
 
 \subsubsection*{Salzsäure}
 
-Zum Einen lässt sich die Indium-Zinn-Schicht sehr schnell und einfach mit Salsäure (5%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.\\
+Zum Einen lässt sich die Indium-Zinn-Schicht sehr schnell und einfach mit Salsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.\\
 
 \subsubsection*{Platinenätzmittel}
 Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen verwendet wird. Dazu wird eine Natriumpersulfatlösung verwendet und nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternatie zur Salzsäure dar.\\
