--- a/paper/Kapitel/zusammenfassung.tex
+++ b/paper/Kapitel/zusammenfassung.tex
@@ -1,1 +1,21 @@
 \section{Zusammenfassung}
+
+Folgende Verfahrenschritte zur Herstellung der Flüssigkristallanzeige haben sich als die am besten geeigneten herausgestellt und werden für den weiteren Verlaufe des Projekts eingesetzt:
+
+\begin{itemize}
+\item Elektrodenstrukturierung durch Klebefolie
+\item Ätzen der Struktur durch Salzsäure (5%)
+\item Oxidieren der Glasplatten im Ofen
+\item Reinigung der Glasplatten im Reinigungsbad (RBS 35) unter Verwendung von Siedesteinchen
+\item Kontaktierung mittels conductive paint und Zweikomponentenkleber\\
+\end{itemize}
+
+Für die Ansteuerung werden folgende Parameter gewählt:
+
+\begin{itemize}
+\item Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\)
+\item Frequenz \(50\,\textrm{Hz}\)
+\item Multiplexverfahren\\
+\end{itemize}
+
+Im weiteren Verlauf des Projekts muss nun noch die Ansteuerung getestet druch die Platine getestet werden. Nach einem erfolgreichen Test, können alle Kontakte mit der Platine verbunden und das Programm geschrieben werden. Anschließend wird ein Gehäuse für die Uhr gelasert um das Projekt abzuschließen.
