Ein bisschen kürzen

--- a/paper/Allgemeines/latexConfig.tex
+++ b/paper/Allgemeines/latexConfig.tex
@@ -19,3 +19,6 @@
 \IEEEoverridecommandlockouts{}
 %
 % ----------------------------------------------------------------------
+
+%\linespread{0.9}
+\addtolength{\parskip}{-1mm}
