--- a/paper/Kapitel/zusammenfassung.tex
+++ b/paper/Kapitel/zusammenfassung.tex
@@ -10,12 +10,9 @@ Folgende Verfahrenschritte zur Herstellung der Flüssigkristallanzeige haben sic
 \item Kontaktierung mittels conductive paint und Zweikomponentenkleber\\
 \end{itemize}
 
-Für die Ansteuerung werden folgende Parameter gewählt:
-
-\begin{itemize}
-\item Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\)
-\item Frequenz \(50\,\textrm{Hz}\)
-\item Multiplexverfahren\\
-\end{itemize}
+Die Ansteuerung erfolgt mit
+einer Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\)
+bei einer Frequenz von \(50\,\textrm{Hz}\) im
+Multiplexverfahren.
 
 Im weiteren Verlauf des Projekts muss nun noch die Ansteuerung getestet druch die Platine getestet werden. Nach einem erfolgreichen Test, können alle Kontakte mit der Platine verbunden und das Programm geschrieben werden. Anschließend wird ein Gehäuse für die Uhr gelasert um das Projekt abzuschließen.
