--- a/paper/Kapitel/bibliography.tex
+++ b/paper/Kapitel/bibliography.tex
@@ -53,5 +53,21 @@ Conrad electronics
 \hskip 1em plus 0.5em minus 0.4em\relax
 \url{https://www.conrad.de/de/fotokopierlack-crc-kontakt-chemie-positiv-20-82004-aa-100-ml-813923.html}
 
+\bibitem{fablabwerkzeuge}
+FAUFabLab
+(am 7.~Februar aberufen)
+\emph{Werkzeuge des FAUFabLab}
+\label{fablabwerkzeuge}
+\hskip 1em plus 0.5em minus 0.4em\relax
+\url{https://fablab.fau.de/tool}
+
+\bibitem{atmel88pa}
+ATMEL
+(am 7.~Februar aberufen)
+\emph{Microcontroller ATMEL ATmega88PA}
+\label{atmel88pa}
+\hskip 1em plus 0.5em minus 0.4em\relax
+\url{http://www.atmel.com/devices/ATMEGA88PA.aspx}
+
 
 \end{thebibliography}
