Auskommentierung von Teilabschnitten

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -18,17 +18,17 @@ Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von
 Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite[Bauanleitung]{Bauanleitung} \cite[LCD Aufbau und Funktion]{aufbau_und_funktion})
 
 
-\subsection{Produktionsschritte}
-\textbf{Schritt 1:} Strukturierung der Elektroden, durch Aufbringen der Klebefolie auf die Bereiche, an denen ein Symbol sichtbar sein soll.\\
-\textbf{Schritt 2:} Wegätzen der beschichteten Bereiche, die nicht angezeigt werden sollen (mit 5\% Salzsäure), sodass die braune leitende Indium-Zinn Schicht der Glasplatten verschwindet.\\
-\textbf{Schritt 3:} Entfernen der Abdeckschicht (Klebefolie), dabei werden Klebereste mit Aceton entfernt.\\
-\textbf{Schritt 4:} Oxidieren der Indium-Zinn-Schicht (im Ofen bei 250 Grad) zu Indium-Zinn-Oxid, damit die Glasplatten möglichst transparent werden und noch leitfähiger werden.\\
-\textbf{Schritt 5:} Reinigung der Glasplatten durch Kochen in einem im Verhältnis 1:5 verdünnten alkalischen tensidfreien Reinigungsbad für 5 Minuten, damit die Glasplatten komplett fettfrei werden. Dabei werden auch Siedesteinchen verwendet, um einen Siedeverzug zu vermeiden.\\
-\textbf{Schritt 6:} Orientierung der Oberflächenmoleküle der leitenden Schicht der Glasplatten durch die sogenannte {\quote Reiborientierung}. Dies geschieht mit Hilfe eines Zellstofftuchs mit dem über die Platten gerieben wird. Die obere und die untere Glasplatte müssen 90 Grad versetzt orientiert sein.\\
-\textbf{Schritt 7:} Zwischen den Glasplatten werden am Rand Abstandshalter eingelegt, damit diese sich später mit einem Abstand von ungefähr 12 Mikrometern  gegenüberliegen. Hier eignet sich zum Beispiel die Verpackungsfolie von Zigarettenschachteln.\\
-\textbf{Schritt 8:} Die Glasplatten werden mit übereinandergelegt, sodass sich die beiden leitenden Seiten gegenüberliegen. Danach werden zunächst zwei parallele Seiten mit einem Zweikomponent-Kleber verklebt, während Druck auf die Abstandhalterfolie ausgeübt wird. Dadurch wird gewährleistet, dass der Abstand bewahrt wird. Ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion. \\
-\textbf{Schritt 9:} Nun werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht selber durch die Kapillarwirkung in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.
-(Quelle: \cite[Bauanleitung]{Bauanleitung})
+%\subsection{Produktionsschritte}
+%\textbf{Schritt 1:} Strukturierung der Elektroden, durch Aufbringen der Klebefolie auf die Bereiche, an denen ein Symbol sichtbar sein soll.\\
+%\textbf{Schritt 2:} Wegätzen der beschichteten Bereiche, die nicht angezeigt werden sollen (mit 5\% Salzsäure), sodass die braune leitende Indium-Zinn Schicht der Glasplatten verschwindet.\\
+%\textbf{Schritt 3:} Entfernen der Abdeckschicht (Klebefolie), dabei werden Klebereste mit Aceton entfernt.\\
+%\textbf{Schritt 4:} Oxidieren der Indium-Zinn-Schicht (im Ofen bei 250 Grad) zu Indium-Zinn-Oxid, damit die Glasplatten möglichst transparent werden und noch leitfähiger werden.\\
+%\textbf{Schritt 5:} Reinigung der Glasplatten durch Kochen in einem im Verhältnis 1:5 verdünnten alkalischen tensidfreien Reinigungsbad für 5 Minuten, damit die Glasplatten komplett fettfrei werden. Dabei werden auch Siedesteinchen verwendet, um einen Siedeverzug zu vermeiden.\\
+%\textbf{Schritt 6:} Orientierung der Oberflächenmoleküle der leitenden Schicht der Glasplatten durch die sogenannte {\quote Reiborientierung}. Dies geschieht mit Hilfe eines Zellstofftuchs mit dem über die Platten gerieben wird. Die obere und die untere Glasplatte müssen 90 Grad versetzt orientiert sein.\\
+%\textbf{Schritt 7:} Zwischen den Glasplatten werden am Rand Abstandshalter eingelegt, damit diese sich später mit einem Abstand von ungefähr 12 Mikrometern  gegenüberliegen. Hier eignet sich zum Beispiel die Verpackungsfolie von Zigarettenschachteln.\\
+%\textbf{Schritt 8:} Die Glasplatten werden mit übereinandergelegt, sodass sich die beiden leitenden Seiten gegenüberliegen. Danach werden zunächst zwei parallele Seiten mit einem Zweikomponent-Kleber verklebt, während Druck auf die Abstandhalterfolie ausgeübt wird. Dadurch wird gewährleistet, dass der Abstand bewahrt wird. Ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion. \\
+%\textbf{Schritt 9:} Nun werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht selber durch die Kapillarwirkung in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.
+%(Quelle: \cite[Bauanleitung]{Bauanleitung})
 
 \subsection{Elektrodenstrukturaufbringung}
 
