--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -16,28 +16,27 @@ Die Uhr sollte folgende Eigenschaften aufweisen:
 
 Bei der Herstellung des Uhr wird wie folgt vorgegangen: Zuerst wird das LCD-Display an sich hergestellt. Nach der Fertigstellung der Elektronik wird das Programm geschrieben und das Gehäuse gefertigt. 
 
-\subsection{Vorraussetzungen}
-%FIXME welche noch
+%\subsection{Vorraussetzungen}
 
-Dank des FAUFabLab standen uns diverse Maschinen und Werkzeuge zur Verfügung, die uns die Arbeit sehr erleichtert haben. Oft sind diese nicht in jedem privaten Haushalt zu finden, weshalb der Nachbau sich schwierig gestalten kann.
-Im Folgenden sind die verwendeten Werkzeuge aufgeführt:\\
+%Dank des \cite[FAUFabLab]{fablabwerkzeuge} standen uns diverse Maschinen und Werkzeuge zur Verfügung, die uns die Arbeit sehr erleichtert haben. Oft sind diese nicht in jedem privaten Haushalt zu finden, weshalb der Nachbau sich schwierig gestalten kann.
+%Im Folgenden sind die verwendeten Werkzeuge aufgeführt:\\
 
-\begin{itemize}
-\item Folienplotter
-\item Heißluftfön
-\item Backofen
-\item Chemikaliengefäße (Schälchen und Glasgefäße)
-\item Heizfeld
-\item Pipetten
-\item Zubehör zur Platinenherstellung (Drucker, Belichter, Bohrer)
-\item Lasercutter (Zuschneiden des Gehäuses)
-\item Multimeter
-\item Schere
-\item Lötkolben
-\item Seitenschneider\\
-\end{itemize}
+%\begin{itemize}
+%\item Folienplotter
+%\item Heißluftfön
+%\item Backofen
+%\item Chemikaliengefäße (Schälchen und Glasgefäße)
+%\item Heizfeld
+%\item Pipetten
+%\item Zubehör zur Platinenherstellung (Drucker, Belichter, Bohrer)
+%\item Lasercutter (Zuschneiden des Gehäuses)
+%\item Multimeter
+%\item Schere
+%\item Lötkolben
+%\item Seitenschneider\\
+%\end{itemize}
 
-
+\subsection{Verwendete Materialien}
 
 Folgende Materialien wurden für 1 Display verwendet (Manche Materialien können mehrfach verwendet werden):\\
 
